--- a/FourplacesApp/View/LoginView.xaml
+++ b/FourplacesApp/View/LoginView.xaml
@@ -9,13 +9,13 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <StackLayout Grid.Row="0">
-                <Label Text="Please enter your credentials" />
+                <Label Text="Username pls " />
                 <Entry Text="{Binding Username}"
                        Placeholder="Username" />
                 <Entry Text="{Binding Password}"
                        Placeholder="Password"
                        IsPassword="True" />
-                <Label Text="Invalid credentials entered" 
+                <Label Text="Tu es mauvais " 
                        IsVisible="{Binding AreCredentialsInvalid}" 
                        TextColor="Red" />
             </StackLayout>
