--- a/FourplacesApp/MainPage.xaml
+++ b/FourplacesApp/MainPage.xaml
@@ -5,7 +5,7 @@
              x:Class="FourplacesApp.MainPage">
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
+        <Label Text="BAAAADDD" 
                HorizontalOptions="Center" 
                VerticalOptions="CenterAndExpand" />
     </StackLayout>
