--- a/FourplacesApp/View/Connection.xaml
+++ b/FourplacesApp/View/Connection.xaml
@@ -15,17 +15,19 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <StackLayout Grid.Row="0">
-                <Label Text="Mail pls " />
+                <Label Text="Connexion" />
                 <Entry Text="{Binding Mail}"
-                       Placeholder="Username" />
+                       Placeholder="Pseudo" />
                 <Entry Text="{Binding Password}"
-                       Placeholder="Password"
+                       Placeholder="Mot de passe"
                        IsPassword="True" />
                 <Label Text="{Binding BadCredentials}" 
                        IsVisible="{Binding BadLogin}" 
                        TextColor="Red" />
             </StackLayout>
-            <Button Grid.Row="2" Text="Auth" />
-         <Button Grid.Row="2" Text="Go S'enregistrer" />
-        </Grid>
+         <StackLayout Grid.Row="2">
+            <Button Grid.Row="2" Text="Auth"  Command="{Binding Connexion}"/> 
+            <Button Grid.Row="2" Text="Go S'enregistrer" Command="{Binding GoToRegister}" />
+                </StackLayout>
+    </Grid>
 </mvvm:BaseContentPage>
