--- a/FourplacesApp/View/Home.xaml
+++ b/FourplacesApp/View/Home.xaml
@@ -9,9 +9,51 @@
                       x:DataType="vm:HomeViewModel"
                       >
     
-    
-    
-    <StackLayout>
-    </StackLayout>
-        
+        <StackLayout>
+        <ListView x:Name="ListeLieux" HasUnevenRows="True" SelectionMode="None" ItemsSource="{Binding Lieux}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:PlaceItemSummary">
+                    <ViewCell>
+                        <Frame CornerRadius="4"
+                               HasShadow="True"
+                               Margin="4,4,4,4"
+                               Padding="8,4,8,4"
+                               HorizontalOptions="FillAndExpand"
+                               VerticalOptions="Start"
+                               >
+                            <StackLayout HorizontalOptions="FillAndExpand"
+                                         VerticalOptions="Start"
+                                         Orientation="Horizontal"
+                                         >
+
+                                <StackLayout Orientation="Horizontal"
+                                             Grid.Column="0"
+                                             HorizontalOptions="FillAndExpand"
+                                             VerticalOptions="Center"
+                                             >
+                                    <Image Source="{Binding ImageUrl}"
+                                           HeightRequest="150"
+                                           WidthRequest="150"/>
+
+                                    <StackLayout Orientation="Vertical">
+                                        <Label Text="{Binding Title}" 
+                                           TextColor="Black" 
+                                           LineBreakMode="WordWrap" 
+                                           FontSize="24"
+                                           />
+                                        <Label Text="{Binding Description}" 
+                                           TextColor="Black" 
+                                           LineBreakMode="WordWrap" 
+                                           FontSize="18"
+                                           MaxLines="2"
+                                           />
+                                    </StackLayout>
+                                </StackLayout>
+                            </StackLayout>
+                        </Frame>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+         </ListView>
+    </StackLayout> 
 </mvvm:BaseContentPage>
