--- a/FourplacesApp/View/Home.xaml
+++ b/FourplacesApp/View/Home.xaml
@@ -10,11 +10,16 @@
                       >
     
         <StackLayout>
+          <Label Text="TEST"
+            HorizontalOptions="CenterAndExpand" 
+               TextColor="Black" 
+            FontSize="24"/>
+        
         <ListView x:Name="PlacesList" HasUnevenRows="True" SelectionMode="None" ItemsSource="{Binding Liste}">
             <ListView.ItemTemplate>
                  <DataTemplate x:DataType="models:PlaceItemSummary">
                    
-                    <ViewCell>
+                 <ViewCell>
                         <Frame CornerRadius="4"
                                HasShadow="True"
                                Margin="4,4,4,4"
@@ -26,35 +31,31 @@
                                          VerticalOptions="Start"
                                          Orientation="Horizontal"
                                          >
-
-                                <StackLayout Orientation="Horizontal"
-                                             Grid.Column="0"
-                                             HorizontalOptions="FillAndExpand"
-                                             VerticalOptions="Center"
-                                             >
-                                 
+                                         
 
                                     <StackLayout Orientation="Vertical">
-                                        <Label Text="{Binding Title}" 
+                                      
+                                    <Label Text="{Binding Title}" 
                                            TextColor="Black" 
                                            LineBreakMode="WordWrap" 
                                            FontSize="24"
                                            />
-                                           <Image Source="{Binding SourceImagePlace}"
+                                           <!--
+                                 <Image Source="{Binding SourceImagePlace}"
                                            HeightRequest="150"
                                            WidthRequest="150"/>
-                                        <Label Text="{Binding DescriptionPlace}" 
+                                        <Label Text="{Binding Description}" 
                                            TextColor="Black" 
                                            LineBreakMode="WordWrap" 
                                            FontSize="18"
                                            MaxLines="2"
-                                           />
-                                    </StackLayout>
+                                           />-->
+                              
                                 </StackLayout>
                             </StackLayout>
                         </Frame>
                     </ViewCell>
-                    
+          
                 </DataTemplate>
             </ListView.ItemTemplate>
          </ListView>
