--- a/FourplacesApp/View/Home.xaml
+++ b/FourplacesApp/View/Home.xaml
@@ -2,7 +2,7 @@
   <mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms"
                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                       xmlns:local="clr-namespace:FourplacesApp"
-                      xmlns:models="clr-namespace:FourplacesApp.Model"
+                      xmlns:models="clr-namespace:FourplacesApp.Model.Dtos.PlaceItemSummary.cs"
                       xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms"
                       xmlns:vm="clr-namespace:FourplacesApp.ViewModel"
                       x:Class="FourplacesApp.Home"
@@ -34,17 +34,18 @@
                                          
 
                                     <StackLayout Orientation="Vertical">
-                                      
+                               <!--  
                                     <Label Text="{Binding Title}" 
                                            TextColor="Black" 
                                            LineBreakMode="WordWrap" 
                                            FontSize="24"
                                            />
-                                           <!--
+                              
                                  <Image Source="{Binding SourceImagePlace}"
                                            HeightRequest="150"
                                            WidthRequest="150"/>
-                                        <Label Text="{Binding Description}" 
+                                       
+                                    <Label Text="{Binding Description}" 
                                            TextColor="Black" 
                                            LineBreakMode="WordWrap" 
                                            FontSize="18"
