--- a/FourplacesApp/View/UpdatePassword.xaml
+++ b/FourplacesApp/View/UpdatePassword.xaml
@@ -1,37 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
- <mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                      xmlns:local="clr-namespace:FourplacesApp"
-                      xmlns:models="clr-namespace:FourplacesApp.Model"
-                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms"
-                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel"
-                      x:Class="FourplacesApp.UpdatePassword"
-                      x:DataType="vm:UpdatePasswordViewModel"
-                      >
-                     
-            <Grid Margin="16">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <StackLayout>
-              
-                <Entry Text="{Binding Password1}"
-                       Placeholder="Mot de passe "
-                       IsPassword="True" />
-            
-            <Entry Text="{Binding Password2}"
-                       Placeholder="Répétez le mot de passe "
-                       IsPassword="True" />
-            
-               
-             
-            <Button Text="Valider" Command="{Binding Vald}"/>
-             <Label Text="{Binding BadCredentials}" 
-                       IsVisible="{Binding BadLogin}" 
-                       TextColor="Red" />
-
-            </StackLayout>
-        </Grid>
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FourplacesApp" xmlns:models="clr-namespace:FourplacesApp.Model" xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.UpdatePassword" x:DataType="vm:UpdatePasswordViewModel">
+    <Grid Margin="16">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackLayout>
+            <Entry Text="{Binding Password1}" Placeholder="Mot de passe " IsPassword="True" />
+            <Entry Text="{Binding Password2}" Placeholder="Répétez le mot de passe " IsPassword="True" />
+            <Button Text="Valider" Command="{Binding Vald}" />
+            <Label Text="{Binding BadCredentials}" IsVisible="{Binding BadMdp}" TextColor="Red" />
+        </StackLayout>
+    </Grid>
 </mvvm:BaseContentPage>
