--- a/FourplacesApp/View/Connection.xaml
+++ b/FourplacesApp/View/Connection.xaml
@@ -1,33 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                      xmlns:local="clr-namespace:FourplacesApp"
-                      xmlns:models="clr-namespace:FourplacesApp.Model"
-                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms"
-                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel"
-                      x:Class="FourplacesApp.Connection"
-                      x:DataType="vm:ConnectionViewModel"
-                      >
-            <Grid Margin="16">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <StackLayout Grid.Row="0">
-                <Label Text="Connexion" />
-                <Entry Text="{Binding Mail}"
-                       Placeholder="Mail" />
-                <Entry Text="{Binding Password}"
-                       Placeholder="Mot de passe"
-                       IsPassword="True" />
-                <Label Text="{Binding BadCredentials}" 
-                       IsVisible="{Binding BadLogin}" 
-                       TextColor="Red" />
-            </StackLayout>
-         <StackLayout Grid.Row="2">
-            <Button Grid.Row="2" Text="Auth"  Command="{Binding Connexion}"/> 
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FourplacesApp" xmlns:models="clr-namespace:FourplacesApp.Model" xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.Connection" x:DataType="vm:ConnectionViewModel">
+    <Grid Margin="16">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackLayout Grid.Row="0">
+            <Label Text="Connexion" />
+            <Entry Text="{Binding Mail}" Placeholder="Mail" />
+            <Entry Text="{Binding Password}" Placeholder="Mot de passe" IsPassword="True" />
+            <Label Text="{Binding BadCredentials}" IsVisible="{Binding BadLogin}" TextColor="Red" />
+        </StackLayout>
+        <StackLayout Grid.Row="2">
+            <Button Grid.Row="2" Text="Auth" Command="{Binding Connexion}" />
             <Button Grid.Row="2" Text="Go S'enregistrer" Command="{Binding GoToRegister}" />
-                </StackLayout>
+        </StackLayout>
     </Grid>
 </mvvm:BaseContentPage>
