--- a/FourplacesApp/View/Home.xaml
+++ b/FourplacesApp/View/Home.xaml
@@ -1,46 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-  <mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                      xmlns:local="clr-namespace:FourplacesApp"
-                      xmlns:models="clr-namespace:FourplacesApp.Model.Dtos.PlaceItemSummary.cs"
-                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms"
-                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel"
-                      x:Class="FourplacesApp.Home"
-                      x:DataType="vm:HomeViewModel"
-                      >
-    
-        <StackLayout>
-          <Label Text="TEST"
-            HorizontalOptions="CenterAndExpand" 
-               TextColor="Black" 
-            FontSize="24"/>
-        
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+                      xmlns:local="clr-namespace:FourplacesApp" 
+                      xmlns:models="clr-namespace:FourplacesApp.Model.Dtos" 
+                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
+                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
+                      x:Class="FourplacesApp.Home" 
+                      x:DataType="vm:HomeViewModel">
+    <StackLayout>
+        <Label Text="TEST" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
         <ListView x:Name="PlacesList" HasUnevenRows="True" SelectionMode="None" ItemsSource="{Binding Liste}">
             <ListView.ItemTemplate>
-                 <DataTemplate x:DataType="models:PlaceItemSummary">
-                   
-                 <ViewCell>
-                        <Frame CornerRadius="4"
-                               HasShadow="True"
-                               Margin="4,4,4,4"
-                               Padding="8,4,8,4"
-                               HorizontalOptions="FillAndExpand"
-                               VerticalOptions="Start"
-                               >
-                            <StackLayout HorizontalOptions="FillAndExpand"
-                                         VerticalOptions="Start"
-                                         Orientation="Horizontal"
-                                         >
-                                         
-
-                                    <StackLayout Orientation="Vertical">
-                               <!--  
+                <DataTemplate x:DataType="models:PlaceItemSummary">
+                    <ViewCell>
+                        <Frame CornerRadius="4" HasShadow="True" Margin="4,4,4,4" Padding="8,4,8,4" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+                            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start" Orientation="Horizontal">
+                                <StackLayout Orientation="Vertical">
+                                   
                                     <Label Text="{Binding Title}" 
                                            TextColor="Black" 
                                            LineBreakMode="WordWrap" 
                                            FontSize="24"
                                            />
-                              
+                              <!--
                                  <Image Source="{Binding SourceImagePlace}"
                                            HeightRequest="150"
                                            WidthRequest="150"/>
@@ -51,14 +33,12 @@
                                            FontSize="18"
                                            MaxLines="2"
                                            />-->
-                              
                                 </StackLayout>
                             </StackLayout>
                         </Frame>
                     </ViewCell>
-          
                 </DataTemplate>
             </ListView.ItemTemplate>
-         </ListView>
-    </StackLayout> 
+        </ListView>
+    </StackLayout>
 </mvvm:BaseContentPage>
