--- a/FourplacesApp/View/Sign.xaml
+++ b/FourplacesApp/View/Sign.xaml
@@ -1,46 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                      xmlns:local="clr-namespace:FourplacesApp"
-                      xmlns:models="clr-namespace:FourplacesApp.Model"
-                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms"
-                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel"
-                      x:Class="FourplacesApp.Sign"
-                      x:DataType="vm:SignViewModel"
-                      >
-                     
-            <Grid Margin="16">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <StackLayout>
-                <Label Text="Enregistrement" />
-            
-              <Entry Text="{Binding FirstName}"
-                       Placeholder="Prénom" />
-            
-              <Entry Text="{Binding LastName}"
-                       Placeholder="Nom" />
-                <Entry Text="{Binding EMail}"
-                       Placeholder="Email" />
-            
-                <Entry Text="{Binding Password1}"
-                       Placeholder="Mot de passe "
-                       IsPassword="True" />
-            
-            <Entry Text="{Binding Password2}"
-                       Placeholder="Répétez le mot de passe "
-                       IsPassword="True" />
-            
-               
-             
-            <Button Text="S'enregistrer" Command="{Binding ToSign}"/>
-             <Label Text="{Binding BadCredentials}" 
-                       IsVisible="{Binding BadLogin}" 
-                       TextColor="Red" />
-
-            </StackLayout>
-        </Grid>
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FourplacesApp" xmlns:models="clr-namespace:FourplacesApp.Model" xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.Sign" x:DataType="vm:SignViewModel">
+    <Grid Margin="16">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackLayout>
+            <Label Text="Enregistrement" />
+            <Entry Text="{Binding FirstName}" Placeholder="Prénom" />
+            <Entry Text="{Binding LastName}" Placeholder="Nom" />
+            <Entry Text="{Binding EMail}" Placeholder="Email" />
+            <Entry Text="{Binding Password1}" Placeholder="Mot de passe " IsPassword="True" />
+            <Entry Text="{Binding Password2}" Placeholder="Répétez le mot de passe " IsPassword="True" />
+            <Button Text="S'enregistrer" Command="{Binding ToSign}" />
+            <Label Text="{Binding BadCredentials}" IsVisible="{Binding BadLogin}" TextColor="Red" />
+        </StackLayout>
+    </Grid>
 </mvvm:BaseContentPage>
