--- a/FourplacesApp/View/Home.xaml
+++ b/FourplacesApp/View/Home.xaml
@@ -6,12 +6,13 @@
                       xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
                       xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
                       x:Class="FourplacesApp.Home" 
-                      x:DataType="vm:HomeViewModel">
+                      x:DataType="vm:HomeViewModel"
+            >
     <StackLayout>
-        <Label Text="TEST" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
+        <Label Text="HOME" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
         <ListView x:Name="PlacesList" HasUnevenRows="True" SelectionMode="None" ItemsSource="{Binding Liste}">
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="models:PlaceItemSummary">
+                <DataTemplate>
                     <ViewCell>
                         <Frame CornerRadius="4" HasShadow="True" Margin="4,4,4,4" Padding="8,4,8,4" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
                             <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start" Orientation="Horizontal">
