--- a/FourplacesApp/View/Home.xaml
+++ b/FourplacesApp/View/Home.xaml
@@ -2,7 +2,6 @@
 <mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
                       xmlns:local="clr-namespace:FourplacesApp" 
-                     
                       xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
                       xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
                       x:Class="FourplacesApp.Home" 
@@ -14,7 +13,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Frame CornerRadius="4" HasShadow="True" Margin="4,4,4,4" Padding="8,4,8,4" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+                        <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Start">
                             <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start" Orientation="Horizontal">
                                 <StackLayout Orientation="Vertical">
                                    
@@ -23,17 +22,16 @@
                                            LineBreakMode="WordWrap" 
                                            FontSize="24"
                                            />
-                              <!--
-                                 <Image Source="{Binding SourceImagePlace}"
-                                           HeightRequest="150"
-                                           WidthRequest="150"/>
+                              
+                                 <Image Source="{Binding ImageSourceURL}"
+                                           HeightRequest="100"/>
                                        
                                     <Label Text="{Binding Description}" 
                                            TextColor="Black" 
                                            LineBreakMode="WordWrap" 
                                            FontSize="18"
                                            MaxLines="2"
-                                           />-->
+                                           />
                                 </StackLayout>
                             </StackLayout>
                         </Frame>
