--- a/FourplacesApp/View/PlacesListView.xaml
+++ b/FourplacesApp/View/PlacesListView.xaml
@@ -4,7 +4,7 @@
                       xmlns:local="clr-namespace:FourplacesApp" 
                       xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
                       xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
-                      x:Class="FourplacesApp.Home" 
+                      x:Class="FourplacesApp.PlacesListView" 
                   
             >
     <StackLayout>
