--- a/FourplacesApp/View/PlacesListView.xaml
+++ b/FourplacesApp/View/PlacesListView.xaml
@@ -1,43 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-                      xmlns:local="clr-namespace:FourplacesApp" 
-                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
-                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
-                      x:Class="FourplacesApp.PlacesListView" 
-                  
-            >
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FourplacesApp" xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.PlacesListView">
     <StackLayout>
         <Label Text="HOME" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
-        <ListView x:Name="PlacesList" IsPullToRefreshEnabled="true"
-                  HasUnevenRows="True" SelectionMode="Single" 
-                  ItemsSource="{Binding Liste}"
-                  ItemSelected="Handle_ItemSelected"
-                  
-                 
-                 >
-            <ListView.ItemTemplate  >
+        <ListView x:Name="PlacesList" IsPullToRefreshEnabled="true" HasUnevenRows="True" SelectionMode="Single" ItemsSource="{Binding Liste}" ItemSelected="Handle_ItemSelected">
+            <ListView.ItemTemplate>
                 <DataTemplate>
-                    <ViewCell >
+                    <ViewCell>
                         <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Start">
                             <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start" Orientation="Horizontal">
                                 <StackLayout Orientation="Vertical">
-                                   
-                                    <Label Text="{Binding Title}" 
-                                           TextColor="Black" 
-                                           LineBreakMode="WordWrap" 
-                                           FontSize="24"
-                                           />
-                              
-                                 <Image Source="{Binding ImageSourceURL}"
-                                           HeightRequest="100"/>
-                                       
-                                    <Label Text="{Binding Description}" 
-                                           TextColor="Black" 
-                                           LineBreakMode="WordWrap" 
-                                           FontSize="18"
-                                           MaxLines="2"
-                                           />
+                                    <Label Text="{Binding Title}" TextColor="Black" LineBreakMode="WordWrap" FontSize="24" />
+                                    <Image Source="{Binding ImageSourceURL}" HeightRequest="100" />
+                                    <Label Text="{Binding Description}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
                                 </StackLayout>
                             </StackLayout>
                         </Frame>
