--- a/FourplacesApp/View/PlaceView.xaml
+++ b/FourplacesApp/View/PlaceView.xaml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FourplacesApp" xmlns:models="clr-namespace:FourplacesApp.Model" xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.PlaceView" x:DataType="vm:PlaceViewViewModel">
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+                      xmlns:local="clr-namespace:FourplacesApp" 
+                   xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.PlaceView" >
     <StackLayout>
         <Label Text="{Binding PlaceSelected.Title}" HorizontalOptions="CenterAndExpand" FontSize="18" TextColor="Black" />
-       <!--     -->
-        
-             <Image Source="{Binding PlaceSelected.ImageSourceURL}"/> 
-            <!-- voir pour avoir la meme taile d'aimage sur tout les placesviews -->
-                <Label Text="{Binding PlaceSelected.Description}" 
-                                           TextColor="Black" 
-                                           LineBreakMode="WordWrap" 
-                                           FontSize="18"
-                                           MaxLines="2"/>
-          
-            
-                  <Label Text="{Binding PlaceSelected.Latitude}" 
-                                           TextColor="Black" 
-                                           LineBreakMode="WordWrap" 
-                                           FontSize="18"
-                                           MaxLines="2"
-                                           />
-                <Label Text="{Binding PlaceSelected.Longitude}" 
-                                           TextColor="Black" 
-                                           LineBreakMode="WordWrap" 
-                                           FontSize="18"
-                                           MaxLines="2"
-                                           />
-
-        
-        <ScrollView>
-       
-           
-        </ScrollView>
-
+        <!--     -->
     </StackLayout>
+    <ScrollView>
+        <StackLayout>
+            <Image Source="{Binding PlaceSelected.ImageSourceURL}" />
+            <!-- voir pour avoir la meme taile d'image sur tout les placesviews -->
+            <Label Text="{Binding PlaceSelected.Description}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
+            <Label Text="{Binding PlaceSelected.Latitude}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
+            <Label Text="{Binding PlaceSelected.Longitude}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
+            
+            
+             <ListView x:Name="CommentsList" IsPullToRefreshEnabled="true" HasUnevenRows="True" SelectionMode="Single" ItemsSource="{Binding ListeComms}" >
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+                            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start" Orientation="Horizontal">
+                                <StackLayout Orientation="Vertical">
+                                <Label Text="{Binding Text}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
+
+                                </StackLayout>
+                            </StackLayout>
+                        </Frame>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        </StackLayout>
+    </ScrollView>
 </mvvm:BaseContentPage>
