--- a/FourplacesApp/View/PlaceView.xaml
+++ b/FourplacesApp/View/PlaceView.xaml
@@ -13,6 +13,9 @@
             <!-- voir pour avoir la meme taile d'image sur tout les placesviews -->
             <Label Text="{Binding PlaceSelected.Description}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
            
+             <ContentView Content="{Binding Map}"
+                         HeightRequest="400"
+                         Margin="10,0"/>
             
              <ListView x:Name="CommentsList" IsPullToRefreshEnabled="true" HasUnevenRows="True" SelectionMode="Single" ItemsSource="{Binding ListeComms}" >
             <ListView.ItemTemplate>
