affichage  de tous les lieux sur la map

--- a/FourplacesApp/View/PlacesListView.xaml
+++ b/FourplacesApp/View/PlacesListView.xaml
@@ -5,8 +5,13 @@
                       xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
                       xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
                       x:Class="FourplacesApp.PlacesListView">
+    
+     <ScrollView>
     <StackLayout>
-        <Label Text="HOME" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
+        <Label Text="Carte des lieux" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
+      <ContentView Content="{Binding MapAll}" HeightRequest="400" Margin="10,0"/>
+    
+       
         <ListView x:Name="PlacesList" IsPullToRefreshEnabled="true" HasUnevenRows="True" SelectionMode="Single" ItemsSource="{Binding Liste}" ItemSelected="Handle_ItemSelected">
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -25,4 +30,5 @@
             </ListView.ItemTemplate>
         </ListView>
     </StackLayout>
+         </ScrollView>
 </mvvm:BaseContentPage>
