--- a/FourplacesApp/View/Menu.xaml
+++ b/FourplacesApp/View/Menu.xaml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-                      xmlns:local="clr-namespace:FourplacesApp" 
-                      xmlns:models="clr-namespace:FourplacesApp.Model" 
-                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
-                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
-                      x:Class="FourplacesApp.Menu" 
-                      x:DataType="vm:MenuViewModel">
-    
-    
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FourplacesApp" xmlns:models="clr-namespace:FourplacesApp.Model" xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.Menu" x:DataType="vm:MenuViewModel">
     <StackLayout>
-        <Label Text="{Binding NeedLogin}" HorizontalOptions="CenterAndExpand" FontSize="24" IsVisible="{Binding NoCo}" TextColor="Red"/>
+        <Label Text="{Binding NeedLogin}" HorizontalOptions="CenterAndExpand" FontSize="24" IsVisible="{Binding NoCo}" TextColor="Red" />
         <Button Text="Connexion" Command="{Binding Connexion}" IsEnabled="{Binding NoCo}" />
         <Button Text="Mon profil" Command="{Binding MyProfile}" IsEnabled="{Binding Co}" />
         <Button Text="Accueil" Command="{Binding GoHome}" />
         <Button Text="Deconnexion" Command="{Binding Deconnexion}" IsEnabled="{Binding Co}" />
     </StackLayout>
-    
-</mvvm:BaseContentPage> 
+</mvvm:BaseContentPage>
