--- a/FourplacesApp/View/PlacesListView.xaml
+++ b/FourplacesApp/View/PlacesListView.xaml
@@ -9,7 +9,7 @@
      <ScrollView>
     <StackLayout>
         <Label Text="Carte des lieux" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
-      <ContentView Content="{Binding MapAll}" HeightRequest="400" Margin="10,0"/>
+      <!--<ContentView Content="{Binding MapAll}" HeightRequest="400" Margin="10,0"/> -->
     
        
         <ListView x:Name="PlacesList" IsPullToRefreshEnabled="true" HasUnevenRows="True" SelectionMode="Single" ItemsSource="{Binding Liste}" ItemSelected="Handle_ItemSelected">
