--- a/FourplacesApp/View/PlacesListView.xaml
+++ b/FourplacesApp/View/PlacesListView.xaml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-                      xmlns:local="clr-namespace:FourplacesApp" 
-                      xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" 
-                      xmlns:vm="clr-namespace:FourplacesApp.ViewModel" 
-                      x:Class="FourplacesApp.PlacesListView">
-    
-     <ScrollView>
-    <StackLayout>
-            <!--  <Label Text="Carte des lieux" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
-                    <ContentView Content="{Binding MapAll}" HeightRequest="400" Margin="10,0"/> -->
-    
-       
-        <ListView x:Name="PlacesList" IsPullToRefreshEnabled="true" HasUnevenRows="True" SelectionMode="Single" ItemsSource="{Binding Liste}" ItemSelected="Handle_ItemSelected">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start" Orientation="Horizontal">
-                                <StackLayout Orientation="Vertical">
-                                    <Label Text="{Binding Title}" TextColor="Black" LineBreakMode="WordWrap" FontSize="24" />
-                                    <Image  Source="{Binding ImageSourceURL}" HeightRequest="100" />
-                                    <Label  Text="{Binding Description}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
+<mvvm:BaseContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FourplacesApp" xmlns:mvvm="clr-namespace:Storm.Mvvm.Forms;assembly=Storm.Mvvm.Forms" xmlns:vm="clr-namespace:FourplacesApp.ViewModel" x:Class="FourplacesApp.PlacesListView">
+    <ScrollView>
+        <StackLayout>
+            <Label Text="Carte des lieux" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
+            <ContentView Content="{Binding MapAll}" HeightRequest="400" Margin="10,0" />
+            <ListView x:Name="PlacesList" IsPullToRefreshEnabled="true" HasUnevenRows="True" SelectionMode="Single" ItemsSource="{Binding Liste}" ItemSelected="Handle_ItemSelected">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+                                <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start" Orientation="Horizontal">
+                                    <StackLayout Orientation="Vertical">
+                                        <Label Text="{Binding Title}" TextColor="Black" LineBreakMode="WordWrap" FontSize="24" />
+                                        <Image Source="{Binding ImageSourceURL}" HeightRequest="100" />
+                                        <Label Text="{Binding Description}" TextColor="Black" LineBreakMode="WordWrap" FontSize="18" MaxLines="2" />
+                                    </StackLayout>
                                 </StackLayout>
-                            </StackLayout>
-                        </Frame>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackLayout>
-  </ScrollView>
+                            </Frame>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+    </ScrollView>
 </mvvm:BaseContentPage>
